--- a/style.css
+++ b/style.css
@@ -72,3 +72,23 @@ align-items: center;
     padding-right: 30px;
     padding-left: 30px;
  }
+
+    
+ @media screen and (max-width:874px) {
+    .mainsection {
+        display: flex;
+        flex-direction: column;
+      justify-content: space-around;
+    align-items: center;
+    }
+    
+    .hello{
+        margin-top: 50px;
+        width: 100%;
+        height: 100%;
+    }
+    .nav{
+        padding-left: 30px;
+    padding-right: 30px;
+    }
+ }
